Removed strayed void's

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         /* Configure canvas and gl viewport */
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
-        void gl.viewport(0, 0, canvas.width, canvas.height);
+        gl.viewport(0, 0, canvas.width, canvas.height);
 
 
         /* 
@@ -218,7 +218,7 @@
             // update canvas width, height and set new viewport
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
-            void gl.viewport(0, 0, canvas.width, canvas.height);
+            gl.viewport(0, 0, canvas.width, canvas.height);
 
             // update projection matrix
             aspect = canvas.width / canvas.height;
